fix: align "All Offices" test

--- a/src/components/Text/styles.css
+++ b/src/components/Text/styles.css
@@ -67,6 +67,7 @@
 
 .align-left {
   text-align: left;
+  width: 100%;
 }
 
 .align-center {
